# global_webscraper

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  create_admin.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 505698ac377e_initial_tables.py
config/: prometheus.yml
src/api/: auth.py  main.py  schemas.py
src/api/routes/: auth.py  configs.py  jobs.py  metrics.py  results.py
src/core/: config.py  logging.py  metrics.py
src/frontend/: package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  index.js
src/frontend/src/components/: Navbar.js  ProtectedRoute.js
src/frontend/src/contexts/: AuthContext.js
src/frontend/src/pages/: Configs.js  Dashboard.js  Login.js  Results.js
src/frontend/src/services/: api.js
src/models/: database.py  scrape_config.py  scrape_result.py  user.py
src/scheduler/: celery_app.py  cron_parser.py  tasks.py
src/scraper/: engine.py  gemini_adapter.py
